EHUB-313 test comment out